# Unity-FFF-Cmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/module/: CMakeLists.txt
lib/module/include/: module.h
lib/module/src/: module.c
lib/module/test/: CMakeLists.txt  test_module.c
lib/module_mockable/: CMakeLists.txt
lib/module_mockable/include/: module_mockable.h
lib/module_mockable/src/: module_mockable.c
